@@ -1,6 +1,7 @@
 package com.me.tft_02.soulbound.datatypes;
 
 public enum ActionType {
+    CRAFT,
     OPEN_CHEST,
     PICKUP_ITEM,
     DROP_ITEM;
