@@ -7,6 +7,7 @@ Key:
   - Removal
 
 Version 1.1.8 | Tested on CB 1.6.4-R0.1
+ + Added new Items config file, define items with displaynames/lore here which will be Soulbound
  + Added MythicDrops 1.1.2 AND 2.0.0 support. Thanks Nunnery!
 
 Version 1.1.7 | Tested on CB 1.6.4-R0.1
